# Robotics_Assignment_Posha

./: CMakeLists.txt  README.md  create_video_demo.py  generate_final_report.py  launch_standalone_simulation.sh  launch_text_visualization.sh  posha_assignment_report.txt  posha_visualization.html  structure.txt  terminal_visualizer.py  web_visualizer.py
install/: local_setup.sh  setup.sh
src/posha_simulation/: CMakeLists.txt  __init.py__  package.xml  setup.py
src/posha_simulation/config/rviz/: simulation.rviz
src/posha_simulation/launch/: complete_simulation.launch.py  simulation.launch.py
src/posha_simulation/resource/: CMakeLists.txt
src/posha_simulation/scripts/: advanced_planner.py  interactive_demo.py  motion_controller.py  path_planner.py  piper_planner.py
src/posha_simulation/urdf/: Agilex_piper.urdf  simple_workspace.urdf  workspace.urdf.xacro
src/posha_simulation/worlds/: empty.world  posha_kitchen.world
submission/: standalone_test.py
submission/src/posha_simulation/: CMakeLists.txt
submission/src/posha_simulation/config/rviz/: simulation.rviz
submission/src/posha_simulation/launch/: simulation.launch.py
submission/src/posha_simulation/scripts/: advanced_planner.py  simple_test.py
submission/src/posha_simulation/urdf/: workspace.urdf.xacro
submission/src/posha_simulation/worlds/: posha_world.world
